# Omphalos

./: .gitignore  README.md  clean.sbatch  clean.sh  commands.sh  example.yaml  install.ps1  install.sh  pyproject.toml  requirements.txt  requirements.yml
coeus/: analysis.ipynb  context.py  helper.py  pflotran.py  plots.py
core/: __init__.py  attributes.py  file_methods.py  keyword_block.py  parameter_methods.py  spatial_constructor.py
fitting/: 1086_fit.ipynb  GPflow_rifle-Copy1.ipynb  GPflow_rifle.ipynb  MATT_PLS_RUN_THIS.ipynb  generateData.ipynb  labels.py  learn0D.ipynb  pipeline.ipynb  results.py  rifle_site_pipeline.ipynb  rifle_vis.ipynb  sweep.yaml
omphalos/: attributes.py  context.py  database.py  file_methods.py  generate_inputs.py  input_file.py  keyword_block.py  labels.py  main.py  namelist.py  namelists.py  omphalos_launcher.py  parameter_methods.py  results.py  run.py  settings.py  settings_default.py  spatial_constructor.py  template.py  test_database.dbs
omphalos_parallel/: context.py  parallel.sbatch  parallel_omphalos.py  runtask.sh  slurm_exec.py  slurm_interface.py
pflotran/: attributes.py  cards.py  dev.ipynb  file_methods.py  generate_inputs.py  input_file.py  keyword_block.py  limitations.txt  main.py  omphalos_plotter.py  parameter_methods.py  run.py  settings_default.py  simulation.py  spatial_constructor.py  sweep_test.py  template.py
rhea/: compile_results.py  main.py  parallel.sbatch  prep_directories.sh  run_input_file.sbatch  run_input_file.sh  runtask.sh  slurm_exec.py  slurm_interface.py
tests/: conftest.py
(+736 files in other folders)
